--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>IRead</title>
+    <title>I-Read</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -10,6 +10,9 @@
   </head>
 
   <body>
+    <%= render partial: 'layouts/header'%>
     <%= yield %>
+    <%= render partial: 'layouts/footer'%>
+
   </body>
 </html>
