Add test for revision

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,7 +3,7 @@
     <div class='col-12 pb-3 pt-3 mb-4 border-bottom' >
       <div class='float-right'>
         <%= link_to 'Log In', new_account_session_path, class: 'btn btn-outline-primary' %>
-        <%= link_to 'Sing In', new_account_registration_path, class: 'btn btn-outline-primary' %>
+        <%= link_to 'Sing Up', new_account_registration_path, class: 'btn btn-outline-primary' %>
       </div>
       <h1>I Read</h1>
     </div>
