Fix routes home and public

--- a/app/views/home/new.html.erb
+++ b/app/views/home/new.html.erb
@@ -1,1 +1,1 @@
-Holi crayoli, estas en home, lograste loggearte!!!
+Holi crayoli <%= current_account.username %>, estas en home, lograste loggearte!!!
