Update, center views

--- a/app/views/home/new.html.erb
+++ b/app/views/home/new.html.erb
@@ -1,1 +1,3 @@
-Holi crayoli <%= current_account.username %>, estas en home, lograste loggearte!!!
+<div class='container'>
+  Holi crayoli <%= current_account.username %>, estas en home, lograste loggearte!!!
+</div>
