--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,6 @@
 <div class='container'>
   <div class='row'>
-    <div class='col-12 pb-3 pt-3 mb-4 border-bottom' >
+    <div class='col-12 pb-3 pt-3 border-bottom' >
       <div class='float-right'>
         <% if account_signed_in? %>
           <%= link_to 'Log Out', destroy_account_session_path, method: :delete, class: 'btn btn-outline-primary' %>
@@ -11,5 +11,24 @@
       </div>
       <h1>I Read</h1>
     </div>
+    <% if account_signed_in? %>
+    <nav class="navbar mb-5 col-12">
+      <%= link_to 'Home', home_path, class:"nav-link" %>
+      <div class="nav-item dropdown">
+      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Library
+      </a>
+      <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+        <%= link_to 'Library', library_books_path, class:"dropdown-item" %>
+        <%= link_to 'Add Book', new_library_book_path, class:"dropdown-item" %>
+          </div>
+      </div>
+      <form class="form-inline my-2 my-lg-0">
+        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Search</button>
+      </form>
+    </nav>
+    <% end %>
   </div>
 </div>
+
