--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -15,13 +15,17 @@
     <nav class="navbar mb-5 col-12">
       <%= link_to 'Home', home_path, class:"nav-link" %>
       <div class="nav-item dropdown">
-      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Library
-      </a>
-      <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-        <%= link_to 'Library', library_books_path, class:"dropdown-item" %>
-        <%= link_to 'Add Book', new_library_book_path, class:"dropdown-item" %>
-          </div>
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Library
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <%= link_to 'Library', library_books_path, class:"dropdown-item" %>
+          <%= link_to 'Add Book', new_library_book_path, class:"dropdown-item" %>
+          <%= link_to 'Authors', library_authors_path, class:"dropdown-item" %>
+          <%= link_to 'Add Author', new_library_author_path, class:"dropdown-item" %>
+          <%= link_to 'Publisher', library_publishers_path, class:"dropdown-item" %>
+          <%= link_to 'Add Publisher', new_library_publisher_path, class:"dropdown-item" %>
+        </div>
       </div>
       <form class="form-inline my-2 my-lg-0">
         <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
