--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -34,6 +34,9 @@
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <%= link_to 'My bookshelves', bookshelves_path, class:"dropdown-item" %>
+          <% current_account.bookshelves.each do |bookshelf| %>
+            <%= link_to bookshelf.name, bookshelf_path(bookshelf), class:"dropdown-item" %>
+          <% end %>
           <div class="dropdown-divider"></div>
           <%= link_to 'Add Bookshelf', new_bookshelf_path, class:"dropdown-item" %>
         </div>
