--- a/app/views/bookshelves/show.html.erb
+++ b/app/views/bookshelves/show.html.erb
@@ -1,9 +1,12 @@
 <div class='container'>
   <div class='row'>
     <div class="mx-auto"> 
-      <h1 class='mb-5'>My bookshelves<h1>
-      <h2 class='ml-5 mb-5'><%=@bookshelf.name %></h2>     
+      <h1 class='mb-5'>My bookshelves <h1>
+      <h2 class='ml-5 mb-5'><%=@bookshelf.name %></h2>  
     </div>
+    <div>
+      <%= link_to "Edit bookshelf", edit_bookshelf_path(@bookshelf), class: 'btn btn-outline-primary' %> 
+    </div>   
   </div>
   <div class="row row-cols-1 row-cols-md-3">
     <% @bookshelf.books.each do |book| %>
