Add search, but is case sensitive, fix the view

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -41,10 +41,15 @@
           <%= link_to 'Add Bookshelf', new_bookshelf_path, class:"dropdown-item" %>
         </div>
       </div>
-      <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+      
+      <%# <%= form_for '/search', class:"form-inline my-2 my-lg-0" do |f| %> 
+      <%= form_tag '/search', method: :get, class:"form-inline my-2 my-lg-0"  do |f| %>
+        <%= text_field_tag :keyword, nil, placeholder: "Search", class:"form-control mr-sm-2" %>
+      <%# <form class="form-inline my-2 my-lg-0"> %>
+        <%# <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search"> %>
         <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Search</button>
-      </form>
+      <%# </form> %>
+      <% end %>
     </nav>
     <% end %>
   </div>
