--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -8,7 +8,7 @@
     <h5> Not matches found </h5>
   <% end %>
   <% @search.each do |book| %>
-    <div class="mb-4">
+    <div class="row mb-4">
       <div class="float-left">
         <%= image_tag book.image.thumb.url, class:"card-img-top float-left" %>
       </div>
@@ -17,6 +17,7 @@
         <p><%=book.genre%></p>
         <p><%=book.description%></p>
         <%= link_to "Edit", edit_library_book_path(book), class:"btn btn-primary" %>
+        <%= link_to "Reviews", library_book_reviews_path(book), class:"btn btn-primary" %>
       </div>
     </div>
   <% end %>
