--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,3 +14,8 @@
  *= require_self
  */
 @import "bootstrap/scss/bootstrap";
+
+.ultra-petit-size {
+  width: 2.5rem;
+  // border-radius: 158px;
+}
