--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,10 +1,24 @@
 <div class='container'>
   <div class='row'>
     <div class="mx-auto">
-      <h2>Edit <%= resource_name.to_s.humanize %></h2>
+      <h2>Edit Profile </h2>
 
       <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
         <%= render "devise/shared/error_messages", resource: resource %>
+          <div class="custom-file mb-4">
+           <%= f.label :avatar, id:"custom-file-label", class:"custom-file-label", for:"inputGroupFile02" %>
+           <%= f.file_field :avatar, class:"custom-file-input", id:"inputGroupFile02" %>
+         </div>
+
+         <div class='form-group'>
+          <%= f.label :username %>
+          <%= f.text_field :username, class:'form-control' %>
+        </div>
+
+         <div class='form-group'>
+          <%= f.label :name %>
+          <%= f.text_field :name, class:'form-control' %>
+        </div>
 
         <div class="form-group">
           <%= f.label :email %><br />
@@ -38,10 +52,6 @@
           <%= f.submit "Update", class:"btn btn-primary" %>
         </div>
       <% end %>
-
-      <h3>Cancel my account</h3>
-
-      <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
 
       <%= link_to "Back", :back %>
     </div>
