--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -6,6 +6,16 @@
       <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
         <%= render "devise/shared/error_messages", resource: resource %>
        
+        <div class='form-group'>
+          <%= f.label :username %>
+          <%= f.text_field :username,autofocus: true, autocomplete: "username", class:'form-control' %>
+        </div>
+
+        <div class='form-group'>
+          <%= f.label :name %>
+          <%= f.text_field :name, autofocus: true, autocomplete: "name", class:'form-control' %>
+        </div>
+
         <div class="form-group">
           <%= f.label :email %><br />
           <%= f.email_field :email, autofocus: true, autocomplete: "email", class:'form-control' %>
