--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -10,7 +10,7 @@
       <p><strong> Username: </strong> <%= @account.username %> </p>
       <p><strong> Name: </strong> <%= @account.name %> </p>
       <p><strong> Email: </strong> <%= @account.email %> </p>
-      <%= link_to "Edit profile", edit_account_registration_path(id: current_account.id), class:"btn btn-primary mt-5"%>
+      <%= link_to "Edit profile", edit_account_registration_path(current_account), class:"btn btn-primary mt-5"%>
     </div>
   </div>
 </div>
